src/test/ui/const-generics/issues/issue-72819-generic-in-const-eval.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-72819-generic-in-const-eval.rs:9:17
   |
LL | where Assert::<{N < usize::max_value() / 2}>: IsTrue,
   |                 ^ cannot perform const operation using `N`
   |
   = help: const parameters may only be used as standalone arguments, i.e. `N`

error: aborting due to previous error

